# log-generator

./: Cargo.toml  Dockerfile  Makefile  README.md  prompt.md  rust-toolchain.toml
k8s/: deployment.yaml
src/: main.rs
