[package]
name = "log-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
